# obdisk

./: .gitignore  Makefile.am  Makefile.in  README.md  configure  configure.ac
src/: Makefile.am  Makefile.in  ob_disk.c  ob_extract.c  ob_listdir.c  ob_usage.c  obdisk.c  obdisk.h
src/_obdisk/: Makefile.am  Makefile.in  ob_disk.c  ob_extract.c  ob_listdir.c  ob_usage.c  obdisk.c  obdisk.h
src/_obtext/: Makefile.am  Makefile.in  ob_convert.c  ob_usage.c  obtext  obtext.c  obtext.h
